force-app/main/default/objects/Invoice_Line_item__c/Invoice_Line_item__c.object-meta.xml
<CustomObject>
    <label>Invoice Line item</label>
    <nameField>
        <displayFormat>ILI-{00000}</displayFormat>
        <label>Invoice Line item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>