force-app/main/default/objects/Invoice_Line_item__c/fields/InvoiceTO__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTO__c</fullName>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line items</relationshipLabel>
    <relationshipName>Invoice_Line_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>