force-app/main/default/objects/Invoice_Line_item__c/fields/Transaction_Mode__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Mode__c</fullName>
    <label>Transaction Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Net Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>