force-app/main/default/objects/Invoice_Line_item__c/fields/Transactionid__c.field-meta.xml
<CustomField>
    <fullName>Transactionid__c</fullName>
    <label>Transaction ID</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>